Listing SliTaz as an offical mirror

--- a/distributions.html
+++ b/distributions.html
@@ -208,7 +208,7 @@
               <h5>Homepage:</h5><a href="http://www.slackware.com/">http://www.slackware.com/</a>
             </div>
             <div class="distro" id="slitaz">
-              <h3>SliTaz Linux</h3>
+              <h3>SliTaz Linux (Offical Mirror)</h3>
               <h5>HTTP:</h5><a href="./slitaz/">http://mirror.clarkson.edu/slitaz</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/slitaz<br><br>
               <h5>Upstream Mirror:</h5><a href="http://mirror1.slitaz.org/">mirror1.slitaz.org</a><br>
