Switching to ESLint for JS linting and modifing a few other files

--- a/distributions.html
+++ b/distributions.html
@@ -153,7 +153,7 @@
               <h5>Homepage:</h5><a href="http://www.linuxmint.com/">http://www.linuxmint.com/</a>
             </div>
             <div class="distro" id="manjaro">
-              <h3>Manjaro Linux</h3>
+              <h3>Manjaro Linux (Official Mirror)</h3>
               <h5>HTTP:</h5><a href="./manjaro/">http://mirror.clarkson.edu/manjaro/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/manjaro<br><br>
               <h5>Upstream Mirror</h5><a href="http://ftp.halifax.rwth-aachen.de">ftp.halifax.rwth-aachen.de</a><br>
