Changed a few things: contact email, new official mirror

--- a/distributions.html
+++ b/distributions.html
@@ -94,7 +94,7 @@
               <h5>Homepage:</h5><a href="http://www.archlinux.org/">http://www.archlinux.org/</a>
             </div>
             <div class="distro" id="centos">
-              <h3>CentOS</h3>
+              <h3>CentOS (Official Mirror)</h3>
               <h5>HTTP:</h5><a href="./centos/">http://mirror.clarkson.edu/centos/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/centos<br><br>
               <h5>Upstream Mirror:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
@@ -243,7 +243,7 @@
           </div>
           <div class="col col--2-of-4">
             <h3>Contact</h3>
-            <p><a href="mailto:mirror-admin@cslabs.clarkson.edu">mirror-admin@cslabs.clarkson.edu</a></p>
+            <p><a href="mailto:newmanre@clarkson.edu">newmanre@clarkson.edu</a></p>
           </div>
         </div>
         <div class="row">
