--- a/stats.html
+++ b/stats.html
@@ -52,7 +52,7 @@
     <div class="content">
       <div class="container">
         <h1>Statistics</h1>
-        <p>Unique IPs: 50287</p>
+        <p>Unique IPs: 72010</p>
         <p>This page includes statistics on the traffic (up and down) of Mirror</p><img class="stat-img" src="img/vnstati-sum.png"><img class="stat-img" src="img/vnstati-month.png"><img class="stat-img" src="img/vnstati-day.png"><img class="stat-img" src="img/vnstati-hour.png">
       </div>
     </div>
@@ -65,7 +65,7 @@
           </div>
           <div class="col col--2-of-4">
             <h3>Contact</h3>
-            <p><a href="mailto:mirror-admin@cslabs.clarkson.edu">mirror-admin@cslabs.clarkson.edu</a></p>
+            <p><a href="mailto:newmanre@clarkson.edu">newmanre@clarkson.edu</a></p>
           </div>
         </div>
         <div class="row">
