--- a/directory.html
+++ b/directory.html
@@ -58,7 +58,7 @@
           </div>
           <div class="col col--2-of-4">
             <h3>Contact</h3>
-            <p><a href="mailto:mirror-admin@cslabs.clarkson.edu">mirror-admin@cslabs.clarkson.edu</a></p>
+            <p><a href="mailto:newmanre@clarkson.edu">newmanre@clarkson.edu</a></p>
           </div>
         </div>
         <div class="row">
