--- a/software.html
+++ b/software.html
@@ -69,8 +69,14 @@
           <h5>Homepage:</h5><a href="http://kernel.org">http://kernel.org</a>
         </section>
         <section>
+          <h3>Gparted</h3>
+          <h5>HTTP:</h5><a href="./gparted/">http://mirror.clarkson.edu/gparted</a><br><br>
+          <h5>Upstream Mirror:</h5><a href="https://sourceforge.net/projects/gparted/files/">https://sourceforge.net/projects/gparted/files/</a><br>
+          <h5>Homepage:</h5><a href="http://gparted.org/">http://gparted.org/</a>
+        </section>
+        <section>
           <h3>Extra Packages for Enterprise Linux (EPEL)</h3>
-          <h5>HTTP:</h5><a href="./fedora-epel/">http:://mirror.clarkson.edu/fedora-epel/</a><br>
+          <h5>HTTP:</h5><a href="./fedora-epel/">http://mirror.clarkson.edu/fedora-epel/</a><br>
           <h5>Rsync:</h5>rsync://mirror.clarkson.edu/fedora-epel/<br><br>
           <h5>Upstream Mirror:</h5><a href="http://mirrors1.kernel.org">http://mirrors1.kernel.org</a><br>
           <h5>Frequency of Updates:</h5>6 times Daily<br>
@@ -125,19 +131,8 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col col--2-of-4">
-            <h3><a href="http://cslabs.clarkson.edu">Clarkson Open Source Institute</a></h3>
-            <h3>Clarkson University | Science Center 336</h3>
-          </div>
-          <div class="col col--2-of-4">
-            <h3>Contact</h3>
-            <p><a href="mailto:newmanre@clarkson.edu">newmanre@clarkson.edu</a></p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col col--1-of-3 col--push-1-of-3">
-            <p>Design by Benjamin Lannon</p>
-            <p><i class="fa fa-github"></i><a href="https://github.com/COSI-Lab/Mirror2016">Github Repo</a></p>
+          <div class="col col--4-of-4">
+            <h4><a href="http://cosi.clarkson.edu">Clarkson Open Source Institute</a> | Design by Benjamin Lannon | Mirror Contact: newmanre@clarkson.edu</h4>
           </div>
         </div>
       </div>
