--- a/distributions.html
+++ b/distributions.html
@@ -143,7 +143,7 @@
               <h5>Homepage:</h5><a href="http://www.ipfire.org/">http://www.ipfire.org/</a>
             </div>
             <div class="distro" id="mint">
-              <h3>LinuxMint</h3>
+              <h3>LinuxMint (Official Mirror)</h3>
               <h5>ISOs:</h5><a href="./linuxmint/iso/">http://mirror.clarkson.edu/linuxmint/iso/</a><br>
               <h5>HTTP:</h5><a href="./linuxmint/">http://mirror.clarkson.edu/linuxmint/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-iso<br>
@@ -237,19 +237,8 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col col--2-of-4">
-            <h3><a href="http://cslabs.clarkson.edu">Clarkson Open Source Institute</a></h3>
-            <h3>Clarkson University | Science Center 336</h3>
-          </div>
-          <div class="col col--2-of-4">
-            <h3>Contact</h3>
-            <p><a href="mailto:newmanre@clarkson.edu">newmanre@clarkson.edu</a></p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col col--1-of-3 col--push-1-of-3">
-            <p>Design by Benjamin Lannon</p>
-            <p><i class="fa fa-github"></i><a href="https://github.com/COSI-Lab/Mirror2016">Github Repo</a></p>
+          <div class="col col--4-of-4">
+            <h4><a href="http://cosi.clarkson.edu">Clarkson Open Source Institute</a> | Design by Benjamin Lannon | Mirror Contact: newmanre@clarkson.edu</h4>
           </div>
         </div>
       </div>
