--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <h2>History</h2>
         <p>
           The newest iteration was completed in April 2016, but we have had Mirror
-          running for almost a decade now. If you want to learn more about the newest
+          running since 2002. If you want to learn more about the newest
           iteration or the history behind the project, Visit the <a href="history.html">History</a> page.
           
         </p>
@@ -104,19 +104,8 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col col--2-of-4">
-            <h3><a href="http://cslabs.clarkson.edu">Clarkson Open Source Institute</a></h3>
-            <h3>Clarkson University | Science Center 336</h3>
-          </div>
-          <div class="col col--2-of-4">
-            <h3>Contact</h3>
-            <p><a href="mailto:newmanre@clarkson.edu">newmanre@clarkson.edu</a></p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col col--1-of-3 col--push-1-of-3">
-            <p>Design by Benjamin Lannon</p>
-            <p><i class="fa fa-github"></i><a href="https://github.com/COSI-Lab/Mirror2016">Github Repo</a></p>
+          <div class="col col--4-of-4">
+            <h4><a href="http://cosi.clarkson.edu">Clarkson Open Source Institute</a> | Design by Benjamin Lannon | Mirror Contact: newmanre@clarkson.edu</h4>
           </div>
         </div>
       </div>
