--- a/software.html
+++ b/software.html
@@ -51,81 +51,101 @@
     </nav>
     <div class="content">
       <div class="container">
-        <section>
-          <h1>Other Software</h1>
-          <h3>GNU Software (Official Mirror)</h3>
-          <h5>HTTP:</h5><a href="./gnu/">http://mirror.clarkson.edu/gnu/</a><br>
-          <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/gnu<br><br>
-          <h5>Upstream Mirror:</h5><a href="http://mirrors.kernel.org/">http://mirrors.kernel.org/</a><br>
-          <h5>Frequency of Updates:</h5>	2 times Daily<br>
-          <h5>Homepage:</h5><a href="http://directory.fsf.org/GNU/">http://directory.fsf.org/GNU/</a>
-        </section>
-        <section>
-          <h3>Linux (Including Kernel Source)</h3>
-          <h5>HTTP:</h5><a href="./linux/">http://mirror.clarkson.edu/linux/</a><br>
-          <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/linux/<br><br>
-          <h5>Upstream Mirror:</h5><a href="http://rsync.kernel.org/">http://rsync.kernel.org/</a><br>
-          <h5>Frequency of Updates:</h5>	2 times Daily<br>
-          <h5>Homepage:</h5><a href="http://kernel.org">http://kernel.org</a>
-        </section>
-        <section>
-          <h3>Gparted</h3>
-          <h5>HTTP:</h5><a href="./gparted/">http://mirror.clarkson.edu/gparted</a><br><br>
-          <h5>Upstream Mirror:</h5><a href="https://sourceforge.net/projects/gparted/files/">https://sourceforge.net/projects/gparted/files/</a><br>
-          <h5>Homepage:</h5><a href="http://gparted.org/">http://gparted.org/</a>
-        </section>
-        <section>
-          <h3>Extra Packages for Enterprise Linux (EPEL)</h3>
-          <h5>HTTP:</h5><a href="./fedora-epel/">http://mirror.clarkson.edu/fedora-epel/</a><br>
-          <h5>Rsync:</h5>rsync://mirror.clarkson.edu/fedora-epel/<br><br>
-          <h5>Upstream Mirror:</h5><a href="http://mirrors1.kernel.org">http://mirrors1.kernel.org</a><br>
-          <h5>Frequency of Updates:</h5>6 times Daily<br>
-          <h5>Homepage:</h5><a href="http://fedoraproject.org/wiki/EPEL">http://fedoraproject.org/wiki/EPEL</a>
-        </section>
-        <section>
-          <h3>The Document Foundation (Including LibreOffice)</h3>
-          <h5>HTTP:</h5><a href="./tdf/">http://mirror.clarkson.edu/tdf/</a><br>
-          <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/tdf<br><br>
-          <h5>Upstream Mirror:</h5><a href="http://rsync.documentfoundation.org/">rsync.documentfoundation.org</a><br>
-          <h5>Frequency of Updates:</h5>	4 times daily<br>
-          <h5>Homepage:</h5><a href="http://www.documentfoundation.org/">http://www.documentfoundation.org/</a>
-        </section>
-        <section>
-          <h3>CTAN</h3>
-          <h5>HTTP:</h5><a href="./ctan/">http://mirror.clarkson.edu/ctan/</a><br>
-          <h5>Frequency of Updates</h5>2 times Daily<br>
-          <h5>Homepage:</h5><a href="http://ctan.org/">http://www.ctan.org/</a>
-        </section>
-        <section>
-          <h3>CPAN</h3>
-          <h5>HTTP:</h5><a href="./cpan/">http://mirror.clarkson.edu/cpan/</a><br>
-          <h5>Frequency of Updates</h5>2 times Daily<br>
-          <h5>Homepage:</h5><a href="http://cpan.org/">http://www.cpan.org/</a>
-        </section>
-        <section>
-          <h3>CRAN</h3>
-          <h5>HTTP:</h5><a href="./cran/">http://mirror.clarkson.edu/cran/</a><br>
-          <h5>Frequency of Updates</h5>2 times Daily<br>
-          <h5>Homepage:</h5><a href="http://cran.r-project.org/">http://cran.r-project.org/</a>
-        </section>
-        <section>
-          <h3>Clonezilla</h3>
-          <h5>HTTP:</h5><a href="./clonezilla/">http://mirror.clarkson.edu/clonezilla/</a><br>
-          <h5>Frequency of Updates</h5>1 time daily<br>
-          <h5>Homepage:</h5><a href="http://clonezilla.org/">http://clonezilla.org/</a>
-        </section>
-        <section>
-          <h3>Cygwin</h3>
-          <h5>HTTP:</h5><a href="./cygwin/">http://mirror.clarkson.edu/cygwin/</a><br>
-          <h5>Frequency of Updates:</h5>2 times Daily<br>
-          <h5>Homepage:</h5><a href="https://www.cygwin.com/">https://www.cygwin.com/</a>
-        </section>
-        <section>
-          <h3>Isabelle (Official Mirror)</h3>
-          <h5>HTTP:</h5><a href="./isabelle/">http://mirror.clarkson.edu/isabelle/</a><br>
-          <h5>Frequency of Updates:</h5>	2 times Daily<br>
-          <h5>Homepage:</h5><a href="https://isabelle.in.tum.de/">https://isabelle.in.tum.de/</a>
-        </section>
+        <h1>Other Software</h1>
+        <div class="row">
+          <div class="col col--1-of-4 software-contents">
+            <h2>Contents</h2>
+            <ul>
+              <li><a href="#gnu">GNU Software</a></li>
+              <li><a href="#linux">Linux</a></li>
+              <li><a href="#gparted">Gparted</a></li>
+              <li><a href="#epel">EPEL</a></li>
+              <li><a href="#tdf">The Document Foundation</a></li>
+              <li><a href="#ctan">CTAN</a></li>
+              <li><a href="#cpan">CPAN</a></li>
+              <li><a href="#cran">CRAN</a></li>
+              <li><a href="#clonezilla">Clonezilla</a></li>
+              <li><a href="#cygwin">Cygwin</a></li>
+              <li><a href="#isabelle">Isabelle</a></li>
+            </ul>
+          </div>
+          <div class="col col--3-of-4 software-section">
+            <section id="gnu">
+              <h3>GNU Software (Official Mirror)</h3>
+              <h5>HTTP:</h5><a href="./gnu/">http://mirror.clarkson.edu/gnu/</a><br>
+              <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/gnu<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirrors.kernel.org/">http://mirrors.kernel.org/</a><br>
+              <h5>Frequency of Updates:</h5>	2 times Daily<br>
+              <h5>Homepage:</h5><a href="http://directory.fsf.org/GNU/">http://directory.fsf.org/GNU/</a>
+            </section>
+            <section id="linux">
+              <h3>Linux (Including Kernel Source)</h3>
+              <h5>HTTP:</h5><a href="./linux/">http://mirror.clarkson.edu/linux/</a><br>
+              <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/linux/<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://rsync.kernel.org/">http://rsync.kernel.org/</a><br>
+              <h5>Frequency of Updates:</h5>	2 times Daily<br>
+              <h5>Homepage:</h5><a href="http://kernel.org">http://kernel.org</a>
+            </section>
+            <section id="gparted">
+              <h3>Gparted</h3>
+              <h5>HTTP:</h5><a href="./gparted/">http://mirror.clarkson.edu/gparted</a><br><br>
+              <h5>Upstream Mirror:</h5><a href="https://sourceforge.net/projects/gparted/files/">https://sourceforge.net/projects/gparted/files/</a><br>
+              <h5>Homepage:</h5><a href="http://gparted.org/">http://gparted.org/</a>
+            </section>
+            <section id="epel">
+              <h3>Extra Packages for Enterprise Linux (EPEL)</h3>
+              <h5>HTTP:</h5><a href="./fedora-epel/">http://mirror.clarkson.edu/fedora-epel/</a><br>
+              <h5>Rsync:</h5>rsync://mirror.clarkson.edu/fedora-epel/<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirrors1.kernel.org">http://mirrors1.kernel.org</a><br>
+              <h5>Frequency of Updates:</h5>6 times Daily<br>
+              <h5>Homepage:</h5><a href="http://fedoraproject.org/wiki/EPEL">http://fedoraproject.org/wiki/EPEL</a>
+            </section>
+            <section id="tdf">
+              <h3>The Document Foundation (Including LibreOffice)</h3>
+              <h5>HTTP:</h5><a href="./tdf/">http://mirror.clarkson.edu/tdf/</a><br>
+              <h5>Rsync:</h5>	rsync://mirror.clarkson.edu/tdf<br><br>
+              <h5>Upstream Mirror:</h5><a href="http://rsync.documentfoundation.org/">rsync.documentfoundation.org</a><br>
+              <h5>Frequency of Updates:</h5>	4 times daily<br>
+              <h5>Homepage:</h5><a href="http://www.documentfoundation.org/">http://www.documentfoundation.org/</a>
+            </section>
+            <section id="ctan">
+              <h3>CTAN</h3>
+              <h5>HTTP:</h5><a href="./ctan/">http://mirror.clarkson.edu/ctan/</a><br>
+              <h5>Frequency of Updates</h5>2 times Daily<br>
+              <h5>Homepage:</h5><a href="http://ctan.org/">http://www.ctan.org/</a>
+            </section>
+            <section id="cpan">
+              <h3>CPAN</h3>
+              <h5>HTTP:</h5><a href="./cpan/">http://mirror.clarkson.edu/cpan/</a><br>
+              <h5>Frequency of Updates</h5>2 times Daily<br>
+              <h5>Homepage:</h5><a href="http://cpan.org/">http://www.cpan.org/</a>
+            </section>
+            <section id="cran">
+              <h3>CRAN</h3>
+              <h5>HTTP:</h5><a href="./cran/">http://mirror.clarkson.edu/cran/</a><br>
+              <h5>Frequency of Updates</h5>2 times Daily<br>
+              <h5>Homepage:</h5><a href="http://cran.r-project.org/">http://cran.r-project.org/</a>
+            </section>
+            <section id="clonezilla">
+              <h3>Clonezilla</h3>
+              <h5>HTTP:</h5><a href="./clonezilla/">http://mirror.clarkson.edu/clonezilla/</a><br>
+              <h5>Frequency of Updates</h5>1 time daily<br>
+              <h5>Homepage:</h5><a href="http://clonezilla.org/">http://clonezilla.org/</a>
+            </section>
+            <section id="cygwin">
+              <h3>Cygwin</h3>
+              <h5>HTTP:</h5><a href="./cygwin/">http://mirror.clarkson.edu/cygwin/</a><br>
+              <h5>Frequency of Updates:</h5>2 times Daily<br>
+              <h5>Homepage:</h5><a href="https://www.cygwin.com/">https://www.cygwin.com/</a>
+            </section>
+            <section id="isabelle">
+              <h3>Isabelle (Official Mirror)</h3>
+              <h5>HTTP:</h5><a href="./isabelle/">http://mirror.clarkson.edu/isabelle/</a><br>
+              <h5>Frequency of Updates:</h5>	2 times Daily<br>
+              <h5>Homepage:</h5><a href="https://isabelle.in.tum.de/">https://isabelle.in.tum.de/</a>
+            </section>
+          </div>
+        </div>
       </div>
     </div>
     <footer>
