--- a/software.html
+++ b/software.html
@@ -74,6 +74,7 @@
               <li><a href="#clonezilla">Clonezilla</a></li>
               <li><a href="#cygwin">Cygwin</a></li>
               <li><a href="#isabelle">Isabelle</a></li>
+              <li><a href="#odroid">Odroid Packages</a></li>
             </ul>
           </div>
           <div class="col col--3-of-4 software-section">
@@ -150,6 +151,12 @@
               <h5>HTTP:</h5><a href="./isabelle/">http://mirror.clarkson.edu/isabelle/</a><br>
               <h5>Frequency of Updates:</h5>	2 times Daily<br>
               <h5>Homepage:</h5><a href="https://isabelle.in.tum.de/">https://isabelle.in.tum.de/</a>
+            </section>
+            <section id="odroid">
+              <h3>Odroid Packages</h3>
+              <h5>HTTP:</h5><a href="./odroid/">http://mirror.clarkson.edu/odroid/</a><br>
+              <h5>Frequency of Updates:</h5>Every 2 days<br>
+              <h5>Homepage:</h5><a href="http://www.hardkernel.com/main/main.php">http://www.hardkernel.com/main/main.php</a>
             </section>
           </div>
         </div>
