--- a/distributions.html
+++ b/distributions.html
@@ -114,7 +114,7 @@
               <h5>Security Updates:</h5><a href="./debian-security/">http://mirror.clarkson.edu/debian-security/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/debian-cd<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/debian<br><br>
-              <h5>Upstream Mirrors:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a>	&<a href="http://cdimage.debian.org">cdimage.debian.org</a><br>
+              <h5>Upstream Mirrors:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a>	&amp; <a href="http://cdimage.debian.org">cdimage.debian.org</a><br>
               <h5>Homepage:</h5><a href="http://www.debian.org/">http://www.debian.org/</a>
             </div>
             <div class="distro" id="fedora">
@@ -135,7 +135,7 @@
             <div class="distro" id="gentoo">
               <h3>Gentoo</h3>
               <h5>ISOs:</h5><a href="./gentoo/releases/">http://mirror.clarkson.edu/archlinux/gentoo/releases/</a><br>
-              <h5>HTTP:</h5><a href="./gentoo/">http://mirror.clarkson.edu/gentoo/</a>	&<a href="./gentoo-portage/">http://mirror.clarkson.edu/gentoo-portage/</a>
+              <h5>HTTP:</h5><a href="./gentoo/">http://mirror.clarkson.edu/gentoo/</a>	amp; <a href="./gentoo-portage/">http://mirror.clarkson.edu/gentoo-portage/</a>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/gentoo<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/gentoo-portage<br><br>
               <h5>Upstream Mirror:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
@@ -156,7 +156,7 @@
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-iso<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-packages<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-debian<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://mirror.umd.edu">mirror.umd.edu</a>	&<a href="http://packages.linuxmint.com">packages.linuxmint.com</a>	&<a href="http://debian.linuxmint.com">debian.linuxmint.com</a><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirror.umd.edu">mirror.umd.edu</a>	&amp; <a href="http://packages.linuxmint.com">packages.linuxmint.com</a>	&amp; <a href="http://debian.linuxmint.com">debian.linuxmint.com</a><br>
               <h5>Homepage:</h5><a href="http://www.linuxmint.com/">http://www.linuxmint.com/</a>
             </div>
             <div class="distro" id="manjaro">
@@ -228,7 +228,7 @@
               <h5>HTTP:</h5><a href="./ubuntu/">http://mirror.clarkson.edu/ubuntu/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/ubuntu-releases<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/ubuntu<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://us.releases.ubuntu.com">us.release.ubuntu.com</a>	&<a href="http://us.archive.ubuntu.com">us.archive.ubuntu.com</a><br>
+              <h5>Upstream Mirror:</h5><a href="http://us.releases.ubuntu.com">us.release.ubuntu.com</a>	&amp; <a href="http://us.archive.ubuntu.com">us.archive.ubuntu.com</a><br>
               <h5>Homepage:</h5><a href="http://www.ubuntu.com/">http://www.ubuntu.com/</a>
             </div>
             <div class="distro" id="voidlinux">
