--- a/stats.html
+++ b/stats.html
@@ -70,9 +70,9 @@
             <div class="radial">
                   <svg class="donut" width="100" height="100%" viewbox="0 0 42 42">
                     <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
-                    <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0" stroke-width="8"></circle>
-                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#606060" stroke-width="8"></circle>
-                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#94CD27" stroke-width="8"></circle>
+                    <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0"></circle>
+                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
+                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
                   </svg>
             </div>
             <div class="content">
@@ -87,7 +87,7 @@
                       <td class="tx"></td>
                     </tr>
                     <tr>
-                      <td>\=</td>
+                      <td>=</td>
                       <td class="total"></td>
                     </tr>
                     <tr>
@@ -100,9 +100,9 @@
             <div class="radial">
                   <svg class="donut" width="100" height="100%" viewbox="0 0 42 42">
                     <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
-                    <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0" stroke-width="8"></circle>
-                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#606060" stroke-width="8"></circle>
-                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#94CD27" stroke-width="8"></circle>
+                    <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0"></circle>
+                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
+                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
                   </svg>
             </div>
             <div class="content">
@@ -117,7 +117,7 @@
                       <td class="tx"></td>
                     </tr>
                     <tr>
-                      <td>\=</td>
+                      <td>=</td>
                       <td class="total"></td>
                     </tr>
                     <tr>
@@ -130,9 +130,9 @@
             <div class="radial">
                   <svg class="donut" width="100" height="100%" viewbox="0 0 42 42">
                     <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
-                    <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0" stroke-width="8"></circle>
-                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#606060" stroke-width="8"></circle>
-                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#94CD27" stroke-width="8"></circle>
+                    <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0"></circle>
+                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
+                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
                   </svg>
             </div>
             <div class="content">
@@ -147,7 +147,7 @@
                       <td class="tx"></td>
                     </tr>
                     <tr>
-                      <td>\=</td>
+                      <td>=</td>
                       <td class="total"></td>
                     </tr>
                     <tr>
@@ -160,9 +160,9 @@
             <div class="radial">
                   <svg class="donut" width="100" height="100%" viewbox="0 0 42 42">
                     <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
-                    <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0" stroke-width="8"></circle>
-                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#606060" stroke-width="8"></circle>
-                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#94CD27" stroke-width="8"></circle>
+                    <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0"></circle>
+                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
+                    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
                   </svg>
             </div>
             <div class="content">
@@ -177,7 +177,7 @@
                       <td class="tx"></td>
                     </tr>
                     <tr>
-                      <td>\=</td>
+                      <td>=</td>
                       <td class="total"></td>
                     </tr>
                     <tr>
