Progress to PB progress Bar added

--- a/stats.html
+++ b/stats.html
@@ -187,6 +187,12 @@
             </div>
           </div>
         </div>
+        <h2>Path to 1PB</h2>
+        <div id="pb-container">
+          <div class="progressbar">
+            <div class="progressbar--filled"></div>
+          </div>
+        </div>
         <h2>Monthly Stats</h2>
         <div class="graph-container">
           <div class="graph-options">
@@ -229,6 +235,7 @@
     <script src="js/day.js"></script>
     <script src="js/hour.js"></script>
     <script src="js/updated.js"></script>
+    <script src="js/total.js"></script>
     <script src="js/stats.js"></script>
   </body>
 </html>
