Message displaying when Stats started being collected

--- a/stats.html
+++ b/stats.html
@@ -63,6 +63,7 @@
     <div class="content">
       <div class="container">
         <h1>Statistics</h1>
+        <p>Statistics for this iteration of Mirror have been collected since April 24, 2016.</p>
         <h2>General Statistics</h2>
         <h3 id="updated"></h3>
         <div class="grid">
