Current Month Estimates added to Month Chart

--- a/stats.html
+++ b/stats.html
@@ -232,6 +232,7 @@
         </div>
       </div>
     </footer>
+    <script src="js/vendors/moment.min.js"></script>
     <script src="js/month.js"></script>
     <script src="js/day.js"></script>
     <script src="js/hour.js"></script>
