--- a/stats.html
+++ b/stats.html
@@ -196,26 +196,17 @@
         </div>
         <h2>Monthly Stats</h2>
         <div class="graph-container">
-          <div class="graph-options">
-            <button class="selected">Graph</button>
-            <!-- button Table-->
-          </div>
+          <div class="graph-options">Last 12 Months</div>
           <div class="graph-content" id="month-graph"></div>
         </div>
         <h2>Weekly Stats</h2>
         <div class="graph-container">
-          <div class="graph-options">
-            <button class="selected">Graph</button>
-            <!-- button Table-->
-          </div>
+          <div class="graph-options">Last 7 days</div>
           <div class="graph-content" id="week-graph"></div>
         </div>
         <h2>Hourly Stats</h2>
         <div class="graph-container">
-          <div class="graph-options">
-            <button class="selected">Graph</button>
-            <!-- button Table-->
-          </div>
+          <div class="graph-options">Last 24 hours</div>
           <div class="graph-content" id="hour-graph"></div>
         </div>
         <h2>Distro Usage</h2>
