Adding the tables actually

--- a/stats.html
+++ b/stats.html
@@ -198,16 +198,19 @@
         <div class="graph-container">
           <div class="graph-options">Last 12 Months</div>
           <div class="graph-content" id="month-graph"></div>
+          <div class="table-content" id="month-table"></div>
         </div>
         <h2>Weekly Stats</h2>
         <div class="graph-container">
           <div class="graph-options">Last 7 days</div>
           <div class="graph-content" id="week-graph"></div>
+          <div class="table-content" id="week-table"></div>
         </div>
         <h2>Hourly Stats</h2>
         <div class="graph-container">
           <div class="graph-options">Last 24 hours</div>
           <div class="graph-content" id="hour-graph"></div>
+          <div class="table-content" id="hour-table"></div>
         </div>
         <h2>Distro Usage</h2>
         <p>View daily bandwidth stats categorized to each repository for distros / software.</p><a href="/distrousage/distrousage_latest.txt">Latest</a><br><a href="/distrousage/archive">Archive</a>
