--- a/distributions.html
+++ b/distributions.html
@@ -98,7 +98,17 @@
               <h5>HTTP:</h5><a href="./archlinux/">http://mirror.clarkson.edu/archlinux/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/archlinux<br><br>
               <h5>Upstream Mirror:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
-              <h5>Homepage:</h5><a href="http://www.archlinux.org/">http://www.archlinux.org/</a>
+              <h5>Homepage:</h5><a href="http://www.archlinux.org/">http://www.archlinux.org/</a><br><br>
+              <div class="setup">
+                <div class="toggleDiv" onclick="this.parentElement.classList.toggle('open')">
+                  <h5>Setup</h5>
+                  <div class="fa fa-chevron-down"></div>
+                </div>
+                <div class="setup-contents">
+                  <p>To setup Arch to use our Mirror, open up <span class="file">/etc/pacman.d/mirrorlist</span> and add the following line:</p>
+                  <pre>Server = http://mirror.clarkson.edu/archlinux/$repo/os/$arch</pre>
+                </div>
+              </div>
             </div>
             <div class="distro" id="centos">
               <h3>CentOS (Official Mirror)</h3>
@@ -114,8 +124,26 @@
               <h5>Security Updates:</h5><a href="./debian-security/">http://mirror.clarkson.edu/debian-security/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/debian-cd<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/debian<br><br>
-              <h5>Upstream Mirrors:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a>	&amp; <a href="http://cdimage.debian.org">cdimage.debian.org</a><br>
-              <h5>Homepage:</h5><a href="http://www.debian.org/">http://www.debian.org/</a>
+              <h5>Upstream Mirrors:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a>	&amp;<a href="http://cdimage.debian.org">cdimage.debian.org</a><br>
+              <h5>Homepage:</h5><a href="http://www.debian.org/">http://www.debian.org/</a><br><br>
+              <div class="setup">
+                <div class="toggleDiv" onclick="this.parentElement.classList.toggle('open')">
+                  <h5>Setup</h5>
+                  <div class="fa fa-chevron-down"></div>
+                </div>
+                <div class="setup-contents">
+                  <p>To setup Debian to use our Mirror, open up <span class="file">/etc/apt/sources.list</span> and modify it to have the following lines:</p>
+                  <pre>deb  http://mirror.clarkson.edu/debian stretch main
+deb-src  http://mirror.clarkson.edu/debian stretch main
+
+deb  http://mirror.clarkson.edu/debian stretch-updates main
+deb-src  http://mirror.clarkson.edu/debian stretch-updates main
+
+deb http://mirror.clarkson.edu/debian-security stretch/updates main
+deb-src http://mirror.clarkson.edu/debian-security stretch/updates main
+</pre>
+                </div>
+              </div>
             </div>
             <div class="distro" id="fedora">
               <h3>Fedora</h3>
@@ -135,7 +163,7 @@
             <div class="distro" id="gentoo">
               <h3>Gentoo</h3>
               <h5>ISOs:</h5><a href="./gentoo/releases/">http://mirror.clarkson.edu/archlinux/gentoo/releases/</a><br>
-              <h5>HTTP:</h5><a href="./gentoo/">http://mirror.clarkson.edu/gentoo/</a>	amp; <a href="./gentoo-portage/">http://mirror.clarkson.edu/gentoo-portage/</a>
+              <h5>HTTP:</h5><a href="./gentoo/">http://mirror.clarkson.edu/gentoo/</a>	amp;<a href="./gentoo-portage/">http://mirror.clarkson.edu/gentoo-portage/</a>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/gentoo<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/gentoo-portage<br><br>
               <h5>Upstream Mirror:</h5><a href="http://mirrors.rit.edu">mirrors.rit.edu</a><br>
@@ -156,7 +184,7 @@
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-iso<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-packages<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/linuxmint-debian<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://mirror.umd.edu">mirror.umd.edu</a>	&amp; <a href="http://packages.linuxmint.com">packages.linuxmint.com</a>	&amp; <a href="http://debian.linuxmint.com">debian.linuxmint.com</a><br>
+              <h5>Upstream Mirror:</h5><a href="http://mirror.umd.edu">mirror.umd.edu</a>	&amp;<a href="http://packages.linuxmint.com">packages.linuxmint.com</a>	&amp;<a href="http://debian.linuxmint.com">debian.linuxmint.com</a><br>
               <h5>Homepage:</h5><a href="http://www.linuxmint.com/">http://www.linuxmint.com/</a>
             </div>
             <div class="distro" id="manjaro">
@@ -228,7 +256,7 @@
               <h5>HTTP:</h5><a href="./ubuntu/">http://mirror.clarkson.edu/ubuntu/</a><br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/ubuntu-releases<br>
               <h5>Rsync:</h5>rsync://mirror.clarkson.edu/ubuntu<br><br>
-              <h5>Upstream Mirror:</h5><a href="http://us.releases.ubuntu.com">us.release.ubuntu.com</a>	&amp; <a href="http://us.archive.ubuntu.com">us.archive.ubuntu.com</a><br>
+              <h5>Upstream Mirror:</h5><a href="http://us.releases.ubuntu.com">us.release.ubuntu.com</a>	&amp;<a href="http://us.archive.ubuntu.com">us.archive.ubuntu.com</a><br>
               <h5>Homepage:</h5><a href="http://www.ubuntu.com/">http://www.ubuntu.com/</a>
             </div>
             <div class="distro" id="voidlinux">
