Change Weekly Stats to Daily Stats

--- a/stats.html
+++ b/stats.html
@@ -28,7 +28,7 @@
           var foo = document.getElementById('navstats');
           foo.setAttribute("class", "current");
       };
-      
+
     </script>
   </head>
   <body>
@@ -200,7 +200,7 @@
           <div class="graph-content" id="month-graph"></div>
           <div class="table-content" id="month-table"></div>
         </div>
-        <h2>Weekly Stats</h2>
+        <h2>Daily Stats</h2>
         <div class="graph-container">
           <div class="graph-options">Last 7 days</div>
           <div class="graph-content" id="week-graph"></div>
