Monthly Estimate near top of Stats Page

--- a/stats.html
+++ b/stats.html
@@ -188,6 +188,7 @@
             </div>
           </div>
         </div>
+        <p id="month-estimate"></p>
         <h2>Path to 1PB</h2>
         <div id="pb-container">
           <div class="progressbar">
