--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
           <div class="col col--1-of-3">
             <div class="img-container"><img src="img/blender-plain.png"></div>
-            <h2>GNU Software</h2>
+            <h2>Software</h2>
             <p>
               We also host a variety of software including Blender, GNU, Clonezilla, Cygwin, and many others. you can
               find out more on the <a href="software.html">Software</a> page.
