--- a/stats.html
+++ b/stats.html
@@ -215,7 +215,7 @@
         </div>
         <h2>Distro Usage</h2>
         <p>View daily bandwidth stats categorized to each repository for distros / software.</p><a href="/distrousage/distrousage_latest.txt">Latest</a><br><a href="/distrousage/archive">Archive</a>
-        <p style="text-align:center; font-size: 80%;">MirrorBand V1.1</p>
+        <p style="text-align:center; font-size: 80%; margin: 0; padding: 12px;">MirrorBand V1.1.1</p>
       </div>
     </div>
     <footer>
